src/objects/cb5__CBModelingRuleGroup__c.object
<CustomObject>
    <description>Parent record for several Modeling Rules</description>
    <fields>
        <fullName>cb5__CBFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Folder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>cb5__CBFolder__c.cb5__FolderType__c</field>
                <operation>equals</operation>
                <value>Modeling Rule</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>cb5__CBFolder__c</referenceTo>
        <relationshipLabel>CB Modeling Rule Group Folders</relationshipLabel>
        <relationshipName>CB_MRG_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__DeleteOldResults__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true the special batch for deleting old result data will be created</description>
        <label>Delete Old Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__StoreDrillDown__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if DrillDown needed</description>
        <inlineHelpText>True if DrillDown needed</inlineHelpText>
        <label>Store Drill Down</label>
        <type>Checkbox</type>
    </fields>
    <label>CB Modeling Rule Group</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>cb5__All1</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Modeling Rule Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Modeling Rule Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cb5__ModelingRuleType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(cb5__CBFolder__c &lt;&gt; null,NOT(ISPICKVAL(cb5__CBFolder__r.cb5__FolderType__c, &apos;Modeling Rule&apos;)))</errorConditionFormula>
        <errorDisplayField>cb5__CBFolder__c</errorDisplayField>
        <errorMessage>Folder type must be &quot;Modeling Rule&quot;</errorMessage>
    </validationRules>
</CustomObject>